# golf-flight-sim-3d

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/models/: arrow.blend  arrow.glb  fairway.glb  golf_ball.blend  golf_ball.glb  skybox.blend  skybox_bg.glb  skybox_ground.glb  skybox_sky.glb  slope.blend  slope.glb
assets/primitives/: cube.glb  line.glb  plane.glb  primitives.blend  sphere.glb
src/Framework/: Application.cpp  CMakeLists.txt  MatrixStack.cpp
src/Framework/include/Framework/: Application.hpp  MatrixStack.hpp  Types.hpp
src/Framework/lib/: CMakeLists.txt
src/GolfFlightSim3D/: CMakeLists.txt  GolfFlightSim3D.cpp  GolfFlightSim3D.hpp  Main.cpp  Main.hpp  MemoryArena.cpp  MemoryArena.hpp
